1999-06-19  Richard Boulton <rjb37@cam.ac.uk>

	* esdlib.c: Add some gnome-doc style self documenting code comments.

1999-06-17  Richard Boulton <rjb37@cam.ac.uk>

	* esdlib.c: Fix compiler warning.

Wed Jun 16 12:52:02 1999 Timur Bakeyev <mc@bat.ru>

	* esd.h, esd.c, esdlib.c: All occurances of "/tmp/.esd/socket" string
	changed to macro ESD_UNIX_SOCKET_NAME - this is a bit cleaner, and
	allows to change name in one place only.

	* esd.c, esdlib.c: Fix a bug with domain sockets, when passing plain 
	strlen() of the socket name to bind() caused it's trancation to "socke" :(
	Changed to sizeof(struct sockaddr_un).
	
	* esdsample.c: Fix a coredump, when no parameters specified.

1999-06-14  Elliot Lee  <sopwith@redhat.com>

	* esdlib.c: Fix bug #1276 - don't try to auto-spawn if $ESPEAKER is set.

Tue Jun  8 18:13:22 1999  John Ellis  <johne@bellatlantic.net>

	* esdmgr.c esd_get_all_info(): Fix memory leaks: player_info and
	sample_info were not being freed after the do .. while loops.

Tue Jun  8 17:00:54 1999 Timur Bakeyev <mc@bat.ru>

	* audio_oss.c: #ifdef'ed SNDCTL_DSP_SETDUPLEX, as it doesn't exist in OSS
	3.0.9 under BSDI3...
	
	* configure.in, acconfig.h: Due to lack of INADDR_LOOPBACK in my OS (BSDI3)
	here is the check against it's presence in netinet/in.h, and if not, defining
	it ourselves.
	
Wed Apr 21 15:10:19 EDT 1999 The Rasterman <raster@rasterman.com>
	* esdlib.c, esd.h, proto.c: added "latency" request protocol to request
          number of smaples of latency you have with a stream to esd.
	  
1999-04-12  Elliot Lee  <sopwith@redhat.com>

	* esdlib.c, esd_config.c, esd.conf, configure.in, Makefile.am:
	  Use a proper config file ($(sysconfdir)/esd.conf, ~/.esd.conf),
	  and fix auto-spawning of esd.

1999-04-11  James Henstridge <james@daa.com.au>

	* esound.spec.in: moved %{prefix}/lib/lib*.so files to the main
	esound package from the devel one, as esddsp requires them to
	function correctly.
