@@ -1,3 +1,4 @@
 [esd]
 auto_spawn=1
 spawn_options=-terminate -nobeeps -as 2
+spawn_wait_ms=100
