@@ -6,6 +6,8 @@
 int esd_no_spawn=1; /* If we can't find even the system config file,
 		       things are screwed up - don't try to make things
 		       worse. */
+int esd_spawn_wait_ms=100; /* Time to wait trying to connect to an
+			      autospawned ESD, in milliseconds. */
 char esd_spawn_options[LINEBUF_SIZE] = "-terminate -nobeeps -as 2";
 
 static int read_esd_config = 0;
@@ -104,6 +106,15 @@ esd_config_read_file(FILE *fh)
       else if(!strcasecmp(key, "spawn_options"))
 	{
 	  strcpy(esd_spawn_options, value);
+	}
+      else if(!strcasecmp(key, "spawn_wait_ms"))
+	{
+	  char *endptr;
+	  long val = strtol(value, &endptr, 0);
+	  if(value != '\0' && *endptr == '\0')
+	    esd_spawn_wait_ms = (int) val;
+	  else
+	    fprintf(stderr, "Invalid value %s for option %s\n", value, key);
 	}
       else
 	fprintf(stderr, "Unknown option %s.\n", key);
